--- a/app/views/data_model_elements/_form.html.erb
+++ b/app/views/data_model_elements/_form.html.erb
@@ -28,12 +28,14 @@
         </div>
       </div>
 
-      <div class="sm:col-span-2">
-        <%= form.label :color %>
-        <div class="mt-2">
-          <%= form.color_field :color %>
+      <%- unless params[:hide_colors] %>
+        <div class="sm:col-span-2">
+          <%= form.label :color %>
+          <div class="mt-2">
+            <%= form.color_field :color %>
+          </div>
         </div>
-      </div>
+      <% end %>
 
       <div class="sm:col-span-2">
         <%= form.label :position %>
