--- a/app/views/impact_cards/initiatives/show.html.erb
+++ b/app/views/impact_cards/initiatives/show.html.erb
@@ -23,7 +23,7 @@
 
   <div class="mt-4 flex flex-wrap items-end justify-between gap-4">
     <% @focus_areas_groups.each do |focus_area_group| %>
-      <div class="mb-6">
+      <div class="mb-6 w-full">
 
         <h2 class="text-2xl font-bold text-zinc-950 dark:text-white mb-4">
           <%= focus_area_group.name %>
