--- a/app/views/impact_cards/_grid.html.erb
+++ b/app/views/impact_cards/_grid.html.erb
@@ -60,7 +60,12 @@
       <div class="col-span-3 w-full mb-2 ml-2">
         <div class="flex flex-wrap gap-y-2">
           <%# TODO: Move grouping of data to impact_card_grid %>
-          <%- data.except('initiative').values.group_by { |value| value[:focus_area_id] }.each do |focus_area_id, grouped_checklist_item_data| %>
+          <%- 
+            data
+              .except('initiative')
+              .values
+              .sort_by{|hash| hash.values_at(:focus_area_group_position, :focus_area_position, :characteristic_position) }
+              .group_by { |value| value[:focus_area_id] }.each do |focus_area_id, grouped_checklist_item_data| %>
             <div class="flex flex-nowrap items-center gap-1 mr-2">
               <%# TODO: Move the lookup of the focus area details to impact_card_grid %>
               <%= focus_area_grid_element(grouped_checklist_item_data.first) %>
