--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -38,7 +38,7 @@
         %>
           <%= render partial: 'impact_card_selector', locals: { f: f } %>
           <div class="flex space-x-4">
-            <%= custom_date_field_tag :date, nil, title: 'Filter by date' %>
+            <%= custom_date_field_tag :date, Date.today, title: 'Filter by date', required: true %>
             <%= custom_select_tag :status, options_for_select(options_for_comment_statuses), include_blank: false  %>
           </div>
         <% end %>
@@ -54,8 +54,8 @@
           %>
             <%= render partial: 'impact_card_selector', locals: { f: f } %>
             <div class="flex space-x-4">
-              <%= custom_date_field_tag :date_from, nil, title: 'Filter by start date' %>
-              <%= custom_date_field_tag :date_to, nil, title: 'Filter by end date' %>
+              <%= custom_date_field_tag :date_from, Date.today.advance(months: -1), title: 'Filter by start date', required: true %>
+              <%= custom_date_field_tag :date_to, Date.today, title: 'Filter by end date', required: true %>
             </div>
           <% end %>
         <% end %>
