1225 reimplemented import comments

--- a/app/views/impact_cards/import_comments.html.erb
+++ b/app/views/impact_cards/import_comments.html.erb
@@ -31,7 +31,7 @@
           <li>• Required columns: initiative_name, characteristic_name, status, comment</li>
           <li>• Initiative name must match existing initiative in this Impact Card</li>
           <li>• Characteristic name must match existing characteristic</li>
-          <li>• Status must be one of: not_assessed, adequate, needs_attention, on_track, completed</li>
+          <li>• Status must be one of: no_comment, actual, planned, more_information, suggestion</li>
           <li>• Comment can be empty or contain text</li>
         </ul>
       </div>
